LLMBasedTestSuiteReader now takes the class under test and the JUnit suite as input.